--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,414 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 
-:root{
-    --blue: #040C5D;
-    --white: #f7f7f7;
-    --black: #232326;
-    --cyan: #B1CEF4;
-}
-
-body{
-    padding: 0;
-    margin: 0;
-    font-family: 'Montserrat';
-    overflow-x: hidden;
-    box-sizing: border-box;
-}
-
-#values{
-    position: fixed;
-    width: 5vmin;
-    height: 10vmin;
-    z-index: 20;
-    right: 0;
-    bottom: 50%;
-    border-radius: 3px 0 0 3px;
-    cursor: pointer;
-    font-weight: 500;
-}
-
-#dolars{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5vmin;
-    height: 5vmin;
-    background-color: var(--black);
-    border-radius: 3px 0 0 0;
-    color: var(--white);
-}
-
-#bs{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5vmin;
-    height: 5vmin;
-    background-color: var(--white);
-    border-radius: 0 0 0 3px;
-    color: var(--black);
-}
-
-#whatsappIcon{
-    position: fixed;
-    width: 5.5vmin;
-    height: 5.5vmin;
-    cursor: pointer;
-    bottom: 8%;
-    right: 3%;
-    z-index: 10;
-    transition: scale 0.3s linear;
-}
-
-#whatsappIcon:hover{
-    scale: 1.1;
-}
-
-header{
-    position: fixed;
-    width: 100dvw;
-    height: 15dvh;
-    transition: top 0.5s ease-out;
-}
-
-header section{
-    width: 100dvw;
-    height: 12dvh;
-    background-color: var(--blue);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding-left: 2vmin;
-    padding-right: 2vmin;
-    z-index: 30;
-}
-
-header section img{
-    scale: 0.8;
-    cursor: pointer;
-    transition: scale 0.3s linear;
-}
-
-header section img:hover{
-    scale: 0.9;
-}
-
-header section input[type=search]{
-    color: var(--black);
-    width: 70vmin;
-    height: 4vmin;
-    border: none;
-    border-radius: 20px;
-    background-image: url("../../../../public/images/icons/search-icon.png");
-    background-position-x: 0.5vmin; 
+#background-main{
+    background-image: url(/images/background/bg.png);
+    width: 95dvw;
+    height: 90dvh;
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position-y: center;
-    padding: 1vmin;
-    padding-left: 5vmin;
-
-}
-
-header section input:focus{
-    outline: none;
-}
-
-header section section{
-    width: 40vmin;
+    background-size: cover;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 3vmin;
-    align-items: center;
-}
-
-header section section button{
-    background-color: #010744;
-    border: none;
-    border-radius: 5px;
-    padding: 1vmin;
-    color: var(--white);
-    cursor: pointer;
-    transition: padding 0.3s linear;
-}
-
-header section section button:hover{
-    padding: 1vmin 3vmin;
-}
-
-header section section img{
-    cursor: pointer;
-}
-
-header section section div{
-    position: absolute;
-    z-index: -10;
-    background-color: var(--cyan);
-    padding: 0 0.2vmax;
-    text-align: center;
-    border-radius: 3px;
-    top: 10%;
-    cursor: default;
-}
-
-header nav{
-    width: 100dvw;
-    height: 5dvh;
-    background-color: var(--white);
-    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    gap: 0;
+    padding-left: 5dvw;
+    margin-bottom: 10vmin;
 }
 
-header nav ul{
-    width: 100%;
+h1{
+    font-family: Zen dots;
+    color: white;
+    font-size: 12vmin;
+    font-weight: normal;
     margin: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0;
-    list-style: none;
-    color: var(--blue);
-    height: 100%;
 }
 
-header nav ul li{
-    padding: 1vmin;
-    cursor: pointer;
-}
-
-header nav ul li:hover{
-    background-color: #cdcdcd;
-}
-
-aside{
-    position: fixed;
-    height: 88dvh;
-    width: 30dvw;
-    right: -31%;
-    bottom: 0%;
-    background-color: var(--white);
-    z-index: 30;
-    transition: right 0.3s linear;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-aside button{
-    cursor: pointer;
-    width: 20vmin;
-    height: 5vmin;
-    border-radius: 10px;
-    border: solid 1px var(--cyan);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: small;
-    gap: 1vmin;
-    color: var(--blue);
-    margin-left: 2vmin;
-    transition: background-color 0.2s linear;
-}
-
-aside button:hover{
-    background-color: var(--cyan);
-}
-
-aside button span{
-    font-size: 2vmin;
-}
-
-aside button img{
-    width: 1.5vmax;
-    height: 1.5vmax;
-}
-
-aside ul{
-    list-style: none;
-    height: 60%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    gap: 2vmin;
-    flex-wrap: nowrap;
-}
-
-aside ul li{
-    width: 95%;
-    height: 25%;
-    border-radius: 5px;
-    border: var(--black) solid 1px;
-    flex: 0 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 0.5vmin;
-}
-
-aside ul li input[type=number]{
-    width: 5vmin;
-    height: 5vmin;
-    font-size: 3vmin;
-    background-color: var(--white);
-}
-
-aside ul li input[type=number]:focus{
-    outline: none;
-}
-
-aside ul li input[type=number]::-webkit-inner-spin-button{
-    scale: 1.3;
-    opacity: 1;
-}
-
-.productImage{
-    width: 9vmin;
-    height: 9vmin;
-    border: solid 2px black;
-    border-radius: 5px;
-}
-
-aside ul li div{
-    height: 8vmin;
-    width: 19vmin;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-aside ul li span{
-    font-weight: bold;
-    font-size: 2.3vmin;
-    padding: 0;
-    max-width: 22vmin;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: pre;
-}
-
-aside ul li p{
-    font-size: 0.7vmax;
-    padding: 0;
+#slogan{
+    color: white;
+    font-size: 7vmin;
+    width: 45%;
+    font-weight: lighter;
     margin: 0;
-    max-width: 22vmin;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: pre;
 }
 
-aside ul li img:not(.productImage){
-    cursor: pointer;
-    width: 1.5vmax;
-    height: 1.5vmax;
-}
-
-aside section{
-    border-top: solid 0.5px var(--cyan);
-    height: 20%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding-left: 1vmin;
-    gap: 1vmin;
-}
-
-aside section div{
-    display: flex;
-    flex-direction: column;
-}
-
-main{
-    width: 100dvw;
-    min-height: 100dvh;
-    padding-top: 15dvh;
-}
-
-footer{
-    width: 100dvw;
-    height: 30dvh;
-    background-color: var(--black);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--white);
-    padding-top: 2vmin;
-}
-
-footer h3{
-    font-size: 2vmin;
-}
-
-footer ul{
-    font-size: 1.9vmin;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2.5vmin;
-    justify-content: center;
-    padding: 0;
-}
-
-footer ul li{
-    cursor: pointer;
-}
-
-footer ul li:hover{
-    text-decoration: underline;
-}
-
-footer section {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 7vmin;
-}
-
-footer section article{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: end;
-    gap: 2vmin;
-    width: 50%;
-    padding-right: 3vmin;
-}
-
-footer section article img{
-    width: 7vmin;
-    height: 6vmin;
-    scale: 0.8;
-}
-
-footer section article h2{
-    font-family: "Zen Dots";
-    letter-spacing: 1px;
-}
-
-footer section section{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 0.8vmin;
-    width: 50%;
-    padding-left: 2vmin;
-}
-
-footer section section div{
-    border-radius: 100%;
-    background-color: var(--white);
-    width: 3vmin;
-    height: 3vmin;
-}
-
-#background{
-    position: absolute;
-    height: 85dvh;
-    width: 100dvw;
-    z-index: -10;
+#space{
+    height: 20vmin;
 }
