--- a/src/routes/index.ejs
+++ b/src/routes/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers</title>
+    <link rel="stylesheet" href="/css/user/general.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
             <img src="/images/Logo/logo-landing.png">
             <input type="search">
             <section>
-                <button onclick="location.href='/login'">Iniciar sesión</button>
+                <button>Iniciar sesión</button>
                 <div>0</div>
                 <img id="cart" src="/images/icons/store.svg">
             </section>
@@ -108,11 +109,151 @@
     </aside>
 
     <main>
-        <img id="background" src="/images/background/bg.png">
-        <h1>Drinkers</h1>
-        <p>
+        <div id="background-main">
+        <h1>DRINKERS</h1>
+        <p id="slogan">
             El elixir perfecto, la entrega perfecta
         </p>
+        </div>
+
+        <div>
+            <section>
+                <h3 class="subtitle">Popular en Drinkers</h3>
+                    <ul class="productSection">
+                        <li>
+                            <div class="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div class="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div class="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div class="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div class="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                    </ul>
+            </section>
+            <section>
+                <h3 class="subtitle">Ron</h3>
+                <ul class="productSection">
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="subtitle">Whisky</h3>
+                <ul class="productSection">
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div class="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                </ul>
+            </section>
+            <div id="space"></div>
+        </div>
     </main>
 
     <footer>
