Falta conectar producto con view producto

--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -1,6 +1,6 @@
 <header>
     <section>
-        <img src="/images/Logo/logo-landing.png">
+        <img onclick="window.location.href='/'" src="/images/Logo/logo-landing.png">
         <input type="search">
         <section>
             <button onclick="window.location.href='/login'">Iniciar sesión</button>
