Integrando Componentes automaticos con las secciones

--- a/src/routes/user/producto.ejs
+++ b/src/routes/user/producto.ejs
@@ -103,33 +103,8 @@
         </ul>
     </main>
 
-    <footer>
-        <h3>Atención al cliente</h3>
-        <ul>
-            <li>0000-000000000</li>
-            <li>Hora de ATC: 24h</li>
-            <li>Horarios de entrega: Valencia, Naguanagua y San Diego: 24h</li>
-            <li>Envío en menos de 3 horas gratis el mismo día</li>
-            <li>¿Quienes somos?</li>
-            <li>Preguntas Frecuentes</li>
-            <li>Zona de repartos</li>
-            <li>Términos y Condiciones</li>
-            <li>Políticas de Privación</li>
-            <li>Políticas de Devolución</li>
-        </ul>
-
-        <section>
-            <section>
-                <div></div>
-                <div></div>
-                <div></div>
-            </section>
-            <article>
-                <img src="/images/Logo/logo-landing.png">
-                <h2>Drinkers</h2>
-            </article>
-        </section>
-    </footer>
+    
+    <%- include('./partials/footer') %>
     <script src="/js/user/producto.js"></script>
 </body>
 </html>
