--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -10,15 +10,15 @@
     </section>
     <nav>
         <ul>
-            <li><a href=""></a>RON</li>
-            <li><a href=""></a>WHISKY</li>
-            <li><a href=""></a>VINOS</li>
-            <li><a href=""></a>SIDRA</li>
-            <li><a href=""></a>BRANDY</li>
-            <li><a href=""></a>VODKA</li>
-            <li><a href=""></a>SANGRIA</li>
-            <li><a href=""></a>ANIS</li>
-            <li><a href=""></a>AGUARDIENTE</li>
+            <li><a href="/catalogo?type=Ron">RON</a></li>
+            <li><a href="/catalogo?type=Whisky">WHISKY</a></li>
+            <li><a href="/catalogo?type=Vinos">VINOS</a></li>
+            <li><a href="/catalogo?type=Sidra">SIDRA</a></li>
+            <li><a href="/catalogo?type=Brandy">BRANDY</a></li>
+            <li><a href="/catalogo?type=Vodka">VODKA</a></li>
+            <li><a href="/catalogo?type=Sangría">SANGRÍA</a></li>
+            <li><a href="/catalogo?type=Anis">ANIS</a></li>
+            <li><a href="/catalogo?type=Aguardiente">AGUARDIENTE</a></li>
         </ul>
     </nav>
 </header>
