--- a/src/routes/partials/footer.ejs
+++ b/src/routes/partials/footer.ejs
@@ -6,7 +6,7 @@
         <li>Horarios de entrega: Valencia, Naguanagua y San Diego: 24h</li>
         <li>Envío en menos de 3 horas gratis el mismo día</li>
         <li>¿Quienes somos?</li>
-        <li>Preguntas Frecuentes</li>
+        <li onclick="window.location.href='/faq'">Preguntas Frecuentes</li>
         <li>Zona de repartos</li>
         <li>Términos y Condiciones</li>
         <li>Políticas de Privación</li>
