--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -1,7 +1,17 @@
 <header>
     <section>
         <img onclick="window.location.href='/'" src="/images/Logo/logo-landing.png">
-        <input type="search">
+        <datalist id="catalogo">
+            <option value="Ron">Ron</option>
+            <option value="Whisky">Whisky</option>
+            <option value="Vinos">Vinos</option>
+            <option value="Sidra">Sidra</option>
+            <option value="Brandy">Brandy</option>
+            <option value="Vodka">Vodka</option>
+            <option value="Sangría">Sangría</option>
+            <option value="Anis">Anis</option>
+        </datalist>
+        <input type="search" list="catalogo">
         <section>
             <button onclick="window.location.href='/login'">Iniciar sesión</button>
             <div>0</div>
