Se agrega las ventanas de confirm en la view de inventario

--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -149,7 +149,7 @@
                         <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" name="stock" required>
                     </div>
                 </div>
-                <button type="submit" id="submit">Agregar</button>
+                <button type="submit" id="submit--Agregar">Agregar</button>
             </form>
         </dialog>
         <dialog id="dialog--2">
