--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -239,6 +239,7 @@ dialog .input--Container div select{
     width: 130px;
     padding: 2px 10px;
     border: none;
+    outline: none;
     border-bottom: 2px solid #aaa;
     border-right:2px solid #aaa;
 }
@@ -269,7 +270,7 @@ dialog .input--Container textarea{
     border-radius: 15px;
     font-size: 0.9em;
     max-lines: 2;
-    outline: line;
+    outline: none;
     resize: none;
 }
 dialog .input--Container textarea::placeholder{
