Dandome duro con las validaciones jejje

--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -164,14 +164,14 @@
                 </div>
                 <div class="input--Container">
                     <div class="Items">
-                        <label for="NombreProducto">Nombre del Producto</label>
-                        <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" name="nombre_producto" required>
+                        <label for="Nombre--modificar">Nombre del Producto</label>
+                        <input placeholder="Ingrese el nombre del producto" type="text" id="Nombre--modificar" name="nombre_producto" required>
                     </div>
                 </div>
                 <div class="input--Container">
                     <div class="Items">
-                        <select required name="tipo">
-                            <label for="tipo">Tipo de bebida</label>
+                        <select required name="tipo" id="Tipo--modificar">
+                            <label for="Tipo--modificar">Tipo de bebida</label>
                             <option value="">Seleccione un tipo</option>
                             <option value="Ron">Ron</option>
                             <option value="Vodka">Vodka</option>
@@ -184,12 +184,12 @@
                         </select>
                     </div>
                     <div class="Items">
-                        <label for="Grados">Grados</label>
-                        <input placeholder="Grados del Producto" required type="text" id="Grados" name="grados">
+                        <label for="Grados--modificar">Grados</label>
+                        <input placeholder="Grados del Producto" required type="text" id="Grados--modificar" name="grados">
                     </div>
                     <div class="Items">
-                        <label for="Litros">Litros</label>
-                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros" name="litros">
+                        <label for="Litros--modificar">Litros</label>
+                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros--modificar" name="litros">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -200,32 +200,32 @@
                 </div>
                 <div class="input--Container">
                     <div class="item">
-                        <label for="Paquetes">Paquetes</label>
-                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" name="paquete" required>
+                        <label for="Paquetes--modificar">Paquetes</label>
+                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes--modificar" name="paquete" required>
                     </div>
                     <div class="item">
-                        <label for="Iva">Iva</label>
-                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva" name="iva" required>
+                        <label for="Iva--modificar">Iva</label>
+                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva--modificar" name="iva" required>
                     </div>
                 </div>
                 <div class="input--Container">
                     <div class="item">
-                        <label for="Precio--detal">Precio detal</label>
-                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" name="precio_detal" required>
+                        <label for="Precio--detal--modificar">Precio detal</label>
+                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal--modificar" name="precio_detal" required>
                     </div>
                     <div class="item">
-                        <label for="Precio--mayorista">Precio mayorista</label>
-                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" name="precio_mayorista" required>
+                        <label for="Precio--mayorista--modificar">Precio mayorista</label>
+                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista--modificar" name="precio_mayorista" required>
                     </div>
                 </div>
                 <div class="input--Container">
-                    <label for="Descripcion">Descripción</label>
-                    <textarea id="Descripcion" required cols="50" placeholder="Ingrese la Descripcion del Producto" name="descripcion"></textarea>
+                    <label for="Descripcion--modificar">Descripción</label>
+                    <textarea id="Descripcion--modificar" required cols="50" placeholder="Ingrese la Descripcion del Producto" name="descripcion"></textarea>
                 </div>
                 <div class="input--Container">
                     <div class="Items">
-                        <label for="stock">Cantidad de stock</label>
-                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" name="stock" required>
+                        <label for="stock--modificar">Cantidad de stock</label>
+                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock--modificar" name="stock" required>
                     </div>
                 </div>
                 <button type="submit" id="submit">Modificar</button>
