--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -86,7 +86,7 @@
                 <div class="input--Container">
                     <div class="Items">
                         <label for="NombreProducto">Nombre del Producto</label>
-                        <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" name="nombre_producto" required>
+                        <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" name="nombre_producto" required maxlength="25">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -106,11 +106,11 @@
                     </div>
                     <div class="Items">
                         <label for="Grados">Grados</label>
-                        <input placeholder="Grados del Producto" required type="text" id="Grados" name="grados">
+                        <input placeholder="Grados del Producto" required type="text" id="Grados" name="grados" maxlength="3">
                     </div>
                     <div class="Items">
                         <label for="Litros">Litros</label>
-                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros" name="litros">
+                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros" name="litros" maxlength="3">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -122,21 +122,21 @@
                 <div class="input--Container">
                     <div class="item">
                         <label for="Paquetes">Paquetes</label>
-                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" name="paquete" required>
+                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" name="paquete" required maxlength="3">
                     </div>
                     <div class="item">
                         <label for="Iva">Iva</label>
-                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva" name="iva" required>
+                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva" name="iva" required maxlength="3">
                     </div>
                 </div>
                 <div class="input--Container">
                     <div class="item">
                         <label for="Precio--detal">Precio detal</label>
-                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" name="precio_detal" required>
+                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" name="precio_detal" required max="4">
                     </div>
                     <div class="item">
                         <label for="Precio--mayorista">Precio mayorista</label>
-                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" name="precio_mayorista" required>
+                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" name="precio_mayorista" required maxlength="4">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -146,7 +146,7 @@
                 <div class="input--Container">
                     <div class="Items">
                         <label for="stock">Cantidad de stock</label>
-                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" name="stock" required>
+                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" name="stock" required maxlength="300">
                     </div>
                 </div>
                 <button type="submit" id="submit--Agregar">Agregar</button>
@@ -165,7 +165,7 @@
                 <div class="input--Container">
                     <div class="Items">
                         <label for="Nombre--modificar">Nombre del Producto</label>
-                        <input placeholder="Ingrese el nombre del producto" type="text" id="Nombre--modificar" name="nombre_producto" required>
+                        <input placeholder="Ingrese el nombre del producto" type="text" id="Nombre--modificar" name="nombre_producto" required maxlength="25">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -185,11 +185,11 @@
                     </div>
                     <div class="Items">
                         <label for="Grados--modificar">Grados</label>
-                        <input placeholder="Grados del Producto" required type="text" id="Grados--modificar" name="grados">
+                        <input placeholder="Grados del Producto" required type="text" id="Grados--modificar" name="grados" maxlength="3">
                     </div>
                     <div class="Items">
                         <label for="Litros--modificar">Litros</label>
-                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros--modificar" name="litros">
+                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros--modificar" name="litros" maxlength="3">
                     </div>
                 </div>
                 <div class="input--Container">
@@ -201,31 +201,31 @@
                 <div class="input--Container">
                     <div class="item">
                         <label for="Paquetes--modificar">Paquetes</label>
-                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes--modificar" name="paquete" required>
+                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes--modificar" name="paquete" required maxlength="3">
                     </div>
                     <div class="item">
                         <label for="Iva--modificar">Iva</label>
-                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva--modificar" name="iva" required>
+                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva--modificar" name="iva" required maxlength="3">
                     </div>
                 </div>
                 <div class="input--Container">
                     <div class="item">
                         <label for="Precio--detal--modificar">Precio detal</label>
-                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal--modificar" name="precio_detal" required>
+                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal--modificar" name="precio_detal" required maxlength="4">
                     </div>
                     <div class="item">
                         <label for="Precio--mayorista--modificar">Precio mayorista</label>
-                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista--modificar" name="precio_mayorista" required>
+                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista--modificar" name="precio_mayorista" required maxlength="4">
                     </div>
                 </div>
                 <div class="input--Container">
                     <label for="Descripcion--modificar">Descripción</label>
-                    <textarea id="Descripcion--modificar" required cols="50" placeholder="Ingrese la Descripcion del Producto" name="descripcion"></textarea>
+                    <textarea id="Descripcion--modificar" required cols="50" placeholder="Ingrese la Descripcion del Producto" name="descripcion" maxlength="300"></textarea>
                 </div>
                 <div class="input--Container">
                     <div class="Items">
                         <label for="stock--modificar">Cantidad de stock</label>
-                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock--modificar" name="stock" required>
+                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock--modificar" name="stock" required maxlength="3">
                     </div>
                 </div>
                 <button type="submit" id="submit">Modificar</button>
