Cambios antes de coemnzar las validaciones de proveedor

--- a/public/css/admin/estadistica.css
+++ b/public/css/admin/estadistica.css
@@ -59,6 +59,7 @@ main .Content--table .Table--Container div label img{
     width: 25px;
     position: relative;
     left: -35px;
+    cursor: pointer;
 }
 main .Content--table .Table--Container div table{
     border: 1px solid #aaa;
