--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -159,7 +159,7 @@
                 <div class="input--Container">
                     <div>
                         <label for="Modificar--producto">Id</label>
-                        <input type="text" placeholder="Ingrese el id del producto Modificar" id="Modificar--producto" name="id" required>
+                        <input type="text" placeholder="Ingrese el id del producto Modificar" id="Modificar--producto" name="id" required maxlength="3">
                     </div>
                 </div>
                 <div class="input--Container">
