Terminando las validaciones de la ventana modal de modificar y encontre una mejor manera para el confirm

--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -138,28 +138,28 @@
                         <input placeholder="Ingrese el RIF del proveedor" required id="RIF--modificar" name="rif">
                     </div>
                     <div>
-                        <label for="Bebida">Producto del Proveedor</label>
-                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida" name="producto">
+                        <label for="Bebida--modificar">Producto del Proveedor</label>
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida--modificar" name="producto">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
-                        <label for="Ubicación">Ubicación del Proveedor</label>
-                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación" name="ubicacion">
+                        <label for="Ubicación--modificar">Ubicación del Proveedor</label>
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación--modificar" name="ubicacion">
                     </div>
                     <div>
-                        <label for="Telefono">Telefono del proveedor</label>
-                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono" name="telefono">
+                        <label for="Telefono--modificar">Telefono del proveedor</label>
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono--modificar" name="telefono">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
-                        <label for="Fecha--compra">Fecha de compra</label>
-                        <input type="date" id="Fecha--compra" required name="fecha_compra">
+                        <label for="Fecha--compra--modificar">Fecha de compra</label>
+                        <input type="date" id="Fecha--compra--modificar" required name="fecha_compra">
                     </div>
                     <div>
-                        <label for="Fecha--entrega">Fecha de entrega</label>
-                        <input type="date" id="Fecha--entrega" required name="fecha_entrega">
+                        <label for="Fecha--entrega--modificar">Fecha de entrega</label>
+                        <input type="date" id="Fecha--entrega--modificar" required name="fecha_entrega">
                     </div>
                 </div>
                 <button type="submit" id="SubmitModificar">Modificar</button>
