--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -80,27 +80,27 @@
                 <div class="Input--Container">
                     <div>
                         <label for="Nombre--proveedor">Nombre del Proveedor</label>
-                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor" name="nombre">
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor" name="nombre" maxlength="20">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="RIF">RIF</label>
-                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF" name="rif">
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF" name="rif" maxlength="8">
                     </div>
                     <div>
                         <label for="Bebida">Producto del Proveedor</label>
-                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida" name="producto">
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida" name="producto" maxlength="20">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Ubicación">Ubicación del Proveedor</label>
-                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación" name="ubicacion">
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación" name="ubicacion" maxlength="40">
                     </div>
                     <div>
                         <label for="Telefono">Telefono del proveedor</label>
-                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono" name="telefono">
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono" name="telefono" maxlength="11">
                     </div>
                 </div>
                 <div class="Input--Container">
@@ -123,33 +123,33 @@
                 <div class="Input--Container">
                     <div>
                         <label for="ID">Id</label>
-                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor" name="id">
+                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor" name="id" maxlength="3">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Nombre--modificar">Nombre del Proveedor</label>
-                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--modificar" name="nombre">
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--modificar" name="nombre" maxlength="25">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="RIF--modificar">RIF</label>
-                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF--modificar" name="rif">
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF--modificar" name="rif" maxlength="8">
                     </div>
                     <div>
                         <label for="Bebida--modificar">Producto del Proveedor</label>
-                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida--modificar" name="producto">
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida--modificar" name="producto" maxlength="20">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Ubicación--modificar">Ubicación del Proveedor</label>
-                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación--modificar" name="ubicacion">
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación--modificar" name="ubicacion" maxlength="40">
                     </div>
                     <div>
                         <label for="Telefono--modificar">Telefono del proveedor</label>
-                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono--modificar" name="telefono">
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono--modificar" name="telefono" maxlength="11">
                     </div>
                 </div>
                 <div class="Input--Container">
